@@ -38,10 +38,10 @@ union SPVM_value {
   return SPVM_EXCEPTION;\
 } while (0)\
 
-#define SPVM_NEW_OBJECT(env, obj, package_name, file, line) do {\
+#define SPVM_NEW_OBJECT(env, package_name, object_address, file, line) do {\
   int32_t id = env->get_basic_type_id(env, package_name);\
   if (id < 0) { SPVM_DIE("Package \"%s\" not found", package_name, file, line); };\
-  obj = env->new_object(env, id);\
+  *object_address = env->new_object(env, id);\
 } while (0)\
 
 #define SPVM_NEW_POINTER(env, package_name, pointer, object_address, file, line) do {\
